# ChangeLog for net-im/gaim
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $ Header: $

*gaim-0.58-r1 (12 June 2002)

 12 June 2002; Michael J. Cohen <mjc@gentoo.org> gaim-0.58-r2.ebuild :

 Transparency support added. Thanks ChipX86 in #gaim.  Careful, the patch -p0
 is commented out because currently it segfaults often.


*gaim-0.58-r1 (17 May 2002)

  17 May 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.58-r1.ebuild :

  Building of both gaim and gaim_applet executables fixed (econf added back).
  Fixes bug #2786.

*gaim-0.58 (16 May 2002)

  16 May 2002; William McArthur <sandymac@gentoo.org> gaim-0.58.ebuild :

  The src_install function was installing files into /var/tmp/portage/...
  fixed that. The ebuild also used econf which I belive has been deprecatied and
  removed. I highly suggest you merge this version as it is much better.

*gaim-0.57 (26 Apr 2002)

  26 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.57.ebuild
  files/digest-gaim-0.57 :

  Version bump.

*gaim-0.56-r2 (25 Apr 2002)

  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56-r2.ebuild :

  Bundled gdk-pixbuf dependency with gnome flag for now.  Thanks to
  punkball@ccs.neu.edu (James Dennis) in bug #2103 for this.

*gaim-0.56-r1 (25 Apr 2002)

  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56-r1.ebuild :

  Changed arts dependency to kde3's arts package, and changed KDEDIR to point
  to /usr/kde/3.  Thanks to naz in #gentoo for this.

*gaim-0.56 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56.ebuild :

  Version bump.

*gaim-0.55 (29 Mar 2002)

  29 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.55.ebuild :

  Version bump.

*gaim-0.54 (28 Mar 2002)

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.54.ebuild :

  Version bump.

*gaim-0.53-r2 (8 Mar 2002)

  8 Mar 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.53-r2.ebuild :

  The gnome dep check for gdk-pixbuf was not correct apparently
